--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -32,7 +32,7 @@
                     <td>
                     </td>
                     <td>
-                        <input class="form-control no-border" type="text" placeholder="... new item" [(ngModel)]="newItem[listIndex]">
+                        <input class="form-control no-border" type="text" placeholder="... new item" [(ngModel)]="newItem[listIndex]" (keyup)="$event.key === 'Enter'? addItemToList(listIndex): true">
                     </td>
                     <td class="td-actions float-right">
                       <button type="button" class="btn btn-info btn-link btn-sm" (click)="addItemToList(listIndex)">
@@ -96,55 +96,55 @@
 
 <!-- NEW LIST MODAL -->
 <div class="modal fade" id="new-list" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-newheader col-md-11">
-                <input class="form-control no-border" placeholder="Title..." type="text" [(ngModel)]="newList.title">
-            </div>
-            <div class="modal-body">
-                <table class="table table-sm">
-                  <tbody>
-                      <tr>
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-newheader col-md-11">
+              <input class="form-control no-border" placeholder="Title..." type="text" [(ngModel)]="newList.title">
+          </div>
+          <div class="modal-body">
+              <table class="table table-sm">
+                <tbody>
+                    <tr>
+                      <td>
+                      </td>
+                      <td>
+                          <input class="form-control no-border" type="text" placeholder="... new item" [(ngModel)]="newListItem" (keyup)="$event.key === 'Enter'? addItemToList(): true">
+                      </td>
+                      <td class="td-actions float-right">
+                        <button type="button" rel="tooltip" title="Add" class="btn btn-info btn-link btn-sm" (click)="addItemToList()" id="newListItemBtn">
+                          <i class="material-icons">add</i>
+                        </button>
+                      </td>
+                    </tr>
+                    <ng-container *ngIf="newList.title !='' ">
+                      <tr *ngFor="let item of newList.content">
                         <td>
+                          <div class="form-check">
+                            <label class="form-check-label align-top">
+                              <input class="form-check-input " type="checkbox" value="" [(ngModel)]="item.status">
+                              <span class="form-check-sign">
+                                <span class="check"></span>
+                              </span>
+                            </label>
+                          </div>
                         </td>
                         <td>
-                            <input class="form-control no-border" type="text" placeholder="... new item" [(ngModel)]="newListItem">
+                            <textarea rows="2" class="form-control no-border align-content-center" [(ngModel)]="item.text" wrap="soft"></textarea>
                         </td>
                         <td class="td-actions float-right">
-                          <button type="button" rel="tooltip" title="Add" class="btn btn-info btn-link btn-sm" (click)="addItemToList()">
-                            <i class="material-icons">add</i>
+                          <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm" (click)="delItem($event)">
+                            <i class="material-icons">close</i>
                           </button>
                         </td>
                       </tr>
-                      <ng-container *ngIf="newList.title !='' ">
-                        <tr *ngFor="let item of newList.content">
-                          <td>
-                            <div class="form-check">
-                              <label class="form-check-label align-top">
-                                <input class="form-check-input " type="checkbox" value="" [(ngModel)]="item.status">
-                                <span class="form-check-sign">
-                                  <span class="check"></span>
-                                </span>
-                              </label>
-                            </div>
-                          </td>
-                          <td>
-                              <textarea rows="2" class="form-control no-border align-content-center" [(ngModel)]="item.text" wrap="soft"></textarea>
-                          </td>
-                          <td class="td-actions float-right">
-                            <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm" (click)="delItem($event)">
-                              <i class="material-icons">close</i>
-                            </button>
-                          </td>
-                        </tr>
-                      </ng-container>
-                    </tbody>
-                </table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-round" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-info btn-round" (click)="addList()" data-dismiss="modal">Save</button>
-            </div>
-        </div>
-    </div>
+                    </ng-container>
+                  </tbody>
+              </table>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-round" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-info btn-round" (click)="addList()" data-dismiss="modal">Save</button>
+          </div>
+      </div>
+  </div>
 </div>
