--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-4" *ngFor="let list of myList;let listIndex = index">
       <div class="card">
-        <div class="card-header card-header-tabs " ngClass="{{ 'card-header-' + colors[(listIndex+list.lastupd.getMilliseconds())%6] }}">
+        <div class="card-header card-header-tabs " ngClass="{{ 'card-header-' + colors[(listIndex+list.title.substring(-1,1).charCodeAt(0))%6] }}">
           <div class="nav-tabs-navigation">
             <div class="nav-tabs-wrapper">
               <span class="nav-tabs-title font-weight-bold" >{{list.title}}</span>
