--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-4" *ngFor="let list of myList;let listIndex = index">
       <div class="card">
-        <div class="card-header card-header-tabs " ngClass="{{ 'card-header-' + colors[(listIndex+list.title.substring(-1,1).charCodeAt(0))%6] }}">
+        <div class="card-header card-header-tabs " ngClass="{{ 'card-header-' + colors[(listIndex+list.title.substring(-1,1).charCodeAt(0)*list.title.substring(0,1).charCodeAt(0))%6] }}">
           <div class="nav-tabs-navigation">
             <div class="nav-tabs-wrapper">
               <span class="nav-tabs-title font-weight-bold" >{{list.title}}</span>
@@ -14,7 +14,7 @@
                   </a>
                 </li>
                 <li class="nav-item" rel="tooltip" title="Delete">
-                  <a class="nav-link" href="#" data-toggle="modal" data-target="#confirm-delete">
+                  <a class="nav-link" href="#" data-toggle="modal" (click)="curId=list._id" data-target="#confirm-delete">
                     <i class="material-icons">delete</i>
                     <div class="ripple-container"></div>
                   </a>
