--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -32,10 +32,10 @@
                     <td>
                     </td>
                     <td>
-                        <input class="form-control no-border" type="text" placeholder=".. enter new task .." [(ngModel)]="newItem[listIndex]" (keyup)="$event.key === 'Enter'? addItemToList(listIndex): true">
+                        <input class="form-control no-border" type="text" placeholder=".. enter new task .." [(ngModel)]="newItem[listIndex]" (keyup)="$event.key === 'Enter'? addItemToList(list._id, listIndex): true">
                     </td>
                     <td class="td-actions float-right">
-                      <button type="button" class="btn btn-info btn-link btn-sm" (click)="addItemToList(listIndex)">
+                      <button type="button" class="btn btn-info btn-link btn-sm" (click)="addItemToList(list._id, listIndex)">
                         <i class="material-icons">add</i>
                       </button>
                     </td>
@@ -56,7 +56,7 @@
                           <textarea rows="2" class="form-control no-border align-content-center" [ngClass]="{'strike text-muted':item.done}" [(ngModel)]="item.text" wrap="soft"></textarea>
                       </td>
                       <td class="td-actions float-right">
-                        <button type="button" class="btn btn-danger btn-link btn-sm" (click)="delItemInList(listIndex, contentIndex)">
+                        <button type="button" class="btn btn-danger btn-link btn-sm" (click)="delItemInList(list._id, listIndex, contentIndex)">
                           <i class="material-icons">close</i>
                         </button>
                       </td>
