--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -72,3 +72,12 @@ tr td {
 .form-check .form-check-sign .check {
     margin-bottom: -0.6rem;
 }
+
+.spinner {
+    color: darkgrey;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
