--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,3 +1,6 @@
+<div>
+  <i class="fa fa-spinner fa-5x spinner" [ngClass]="{'fa-spin': isLoading}" *ngIf="isLoading"></i>
+</div>
 <div class="container-fluid body-container" *ngIf="!isLoading">
   <div class="row justify-content-center">
     <div class="col-md-4" *ngFor="let list of myList;let listIndex = index">
