--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -8,13 +8,43 @@
     padding-bottom: 1%;
     margin-bottom: 1%;
     overflow-y: auto;
-    max-height: 25rem;
+    max-height: 26.5rem;
     min-width: 10rem !important;
 }
 
-.card-body::-webkit-scrollbar { 
-    display: none;
+/* .card-body::-webkit-scrollbar {  */
+    /* size: 5px; */
+    /* display: none; */
+/* } */
+
+/* .card-body::-webkit-scrollbar
+{
+	width: 5px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	/* border-radius: 5px; */
+	/* background-color: #F5F5F5; */
+/* } */
+
+.card-body::-webkit-scrollbar-track
+{
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+	border-radius: 10px;
+	background-color: #F5F5F5;
 }
+
+.card-body::-webkit-scrollbar
+{
+	width: 7px;
+	background-color: #F5F5F5;
+}
+
+.card-body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(155, 153, 153);
+}
+
 
 textarea::-webkit-scrollbar { 
     display: none;
@@ -36,6 +66,20 @@ tr td {
 
 .strike {
     text-decoration: line-through;
+}
+
+.extrashadow {
+    box-shadow: 0 0px 00px 0px rgba(128, 127, 127, 0.14), 0 -5px 15px 0px rgba(175, 165, 165, 0.4);
+    /* background: linear-gradient(60deg, #fffefe, #ebe9e9); */
+}
+
+.modal-body {
+    overflow-y: auto;
+    max-height: 25rem;
+}
+
+.modal-body::-webkit-scrollbar { 
+    display: none;
 }
 
 .modal-newheader {
@@ -80,4 +124,8 @@ tr td {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
+}
+
+.cust-new-item {
+    width: 80%;
 }
