Scroll bar improved

--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -1,131 +1,118 @@
 .card {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    min-width: 15rem !important;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  min-width: 15rem !important;
 }
 
 .card-body {
-    padding-bottom: 1%;
-    margin-bottom: 1%;
-    overflow-y: auto;
-    max-height: 26.5rem;
-    min-width: 10rem !important;
+  padding-bottom: 1%;
+  margin-bottom: 1%;
+  overflow-y: auto;
+  max-height: 26.5rem;
+  min-width: 10rem !important;
 }
 
-/* .card-body::-webkit-scrollbar {  */
-    /* size: 5px; */
-    /* display: none; */
-/* } */
-
-/* .card-body::-webkit-scrollbar
-{
-	width: 5px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	/* border-radius: 5px; */
-	/* background-color: #F5F5F5; */
-/* } */
-
-.card-body::-webkit-scrollbar-track
-{
-	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
-	border-radius: 10px;
-	background-color: #F5F5F5;
+.card-body::-webkit-scrollbar-track {
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+  border-radius: 10px;
+  background-color: #F5F5F5;
 }
 
-.card-body::-webkit-scrollbar
-{
-	width: 7px;
-	background-color: #F5F5F5;
+.card-body::-webkit-scrollbar {
+  width: 7px;
+  background-color: #F5F5F5;
 }
 
-.card-body::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: rgb(155, 153, 153);
+.card-body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: rgb(155, 153, 153);
 }
 
 
-textarea::-webkit-scrollbar { 
-    display: none;
+textarea::-webkit-scrollbar {
+  display: none;
 }
 
 .card [class*="card-header-"]:not(.card-header-icon):not(.card-header-text):not(.card-header-image) {
-    padding-top: 5px;
-    padding-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 tr td {
-    border: 0px;
-    margin: 1px;
-    padding-left: 1px;
-    padding-right: 1px;
-    padding-top: 2px;
-    /* white-space:pre; */
+  border: 0px;
+  margin: 1px;
+  padding-left: 1px;
+  padding-right: 1px;
+  padding-top: 2px;
+  /* white-space:pre; */
 }
 
 .strike {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 
 .extrashadow {
-    box-shadow: 0 0px 00px 0px rgba(128, 127, 127, 0.14), 0 -5px 15px 0px rgba(175, 165, 165, 0.4);
-    /* background: linear-gradient(60deg, #fffefe, #ebe9e9); */
+  box-shadow: 0 0px 00px 0px rgba(128, 127, 127, 0.14), 0 -5px 15px 0px rgba(175, 165, 165, 0.4);
+  /* background: linear-gradient(60deg, #fffefe, #ebe9e9); */
 }
 
 .modal-body {
-    overflow-y: auto;
-    max-height: 25rem;
+  overflow-y: auto;
+  max-height: 25rem;
 }
 
-.modal-body::-webkit-scrollbar { 
-    display: none;
+.modal-body::-webkit-scrollbar {
+  display: none;
 }
 
 .modal-newheader {
-    /* background-color: #ef5350; */
-    width: 100%;
-    border-radius: 3px;
-    margin-top: -20px;
-    padding: 15px;
-    color: whitesmoke;
-    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
-    background: linear-gradient(60deg, #ef5350, #e53935);
+  /* background-color: #ef5350; */
+  width: 100%;
+  border-radius: 3px;
+  margin-top: -20px;
+  padding: 15px;
+  color: whitesmoke;
+  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
+  background: linear-gradient(60deg, #ef5350, #e53935);
 }
 
 .modal-newheader ::placeholder {
-    color: whitesmoke;
-    opacity: 1; /* Firefox */
+  color: whitesmoke;
+  opacity: 1;
+  /* Firefox */
 }
 
-.modal .modal-newheader .form-control  {
-    color: whitesmoke;
-    opacity: 1; /* Firefox */
+.modal .modal-newheader .form-control {
+  color: whitesmoke;
+  opacity: 1;
+  /* Firefox */
 }
 
-.modal .modal-newheader .form-control:focus  {
-    color: whitesmoke;
-    opacity: 1; /* Firefox */
-    background-image : linear-gradient(to top, #f0e4e4 2px, hsla(11, 55%, 72%, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px)
+.modal .modal-newheader .form-control:focus {
+  color: whitesmoke;
+  opacity: 1;
+  /* Firefox */
+  background-image: linear-gradient(to top, #f0e4e4 2px, hsla(11, 55%, 72%, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px)
 }
 
 .body-container {
-    padding-right:2rem;
+  padding-right: 2rem;
 }
 
 .form-check .form-check-sign .check {
-    margin-bottom: -0.6rem;
+  margin-bottom: -0.6rem;
 }
 
 .spinner {
-    color: darkgrey;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+  color: darkgrey;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
 }
 
 .cust-new-item {
-    width: 80%;
+  width: 80%;
 }
