--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,39 +1,41 @@
 <header>
-    <div class="collapse bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4 class="text-light font-weight-bold">About</h4>
-            <p class="text-light">Welcome to my first APP using material design (bootstrap) and MEAN stack(Angular, Express, NodeJS, MongoDB).</p>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-white">ashish@bagaddeo.com</a></li>
-              <!-- <li><a href="#" class="text-white">Like on Facebook</a></li> -->
-              <!-- <li><a href="#" class="text-white">Email me</a></li> -->
-            </ul>
-          </div>
+  <div class="collapse bg-dark" id="navbarHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-7 py-4">
+          <h4 class="text-light font-weight-bold">About</h4>
+          <p class="text-light">Welcome to my first APP using material design (bootstrap) and MEAN stack(Angular,
+            Express, NodeJS, MongoDB).</p>
+        </div>
+        <div class="col-sm-4 offset-md-1 py-4">
+          <h4 class="text-white">Contact</h4>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">ashish@bagaddeo.com</a></li>
+            <!-- <li><a href="#" class="text-white">Like on Facebook</a></li> -->
+            <!-- <li><a href="#" class="text-white">Email me</a></li> -->
+          </ul>
         </div>
       </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="container">
-        <a href="#" class="navbar-brand">
-          <i class="material-icons">dashboard </i>
-          <strong> ToDO </strong>
-        </a>
-        <ul class="navbar-nav ">
-          <li class="nav-item active">
-            <a class="btn btn-danger btn-round" href="#" data-toggle="modal" data-target="#new-list">
-              <i class="material-icons">add </i>
-              <strong> New List </strong> <span class="sr-only">(current)</span>
-            </a>
-          </li>
-        </ul>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
+  </div>
+  <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container">
+      <a href="#" class="navbar-brand">
+        <i class="material-icons">dashboard </i>
+        <strong> ToDO </strong>
+      </a>
+      <ul class="navbar-nav ">
+        <li class="nav-item active">
+          <a class="btn btn-danger btn-round" href="#" data-toggle="modal" data-target="#new-list">
+            <i class="material-icons">add </i>
+            <strong> New List </strong> <span class="sr-only">(current)</span>
+          </a>
+        </li>
+      </ul>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </div>
+  </div>
 </header>
