--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,24 +18,31 @@
       </div>
     </div>
   </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
+  <div class="navbar navbar-dark bg-dark shadow-sm ">
     <div class="container">
       <a href="#" class="navbar-brand">
         <i class="material-icons">dashboard </i>
         <strong> ToDO </strong>
       </a>
-      <ul class="navbar-nav ">
-        <li class="nav-item active">
-          <a class="btn btn-danger btn-round" href="#" data-toggle="modal" data-target="#new-list">
-            <i class="material-icons">add </i>
-            <strong> New List </strong> <span class="sr-only">(current)</span>
-          </a>
+      <!-- <li class="nav-item active"> -->
+        <a class="btn btn-danger btn-sm btn-round" href="#" data-toggle="modal" data-target="#new-list">
+          <i class="material-icons">add </i>
+          <strong> New List </strong> <span class="sr-only">(current)</span>
+        </a>
+      <!-- </li> -->
+      <ul class="navbar-nav d-flex flex-row">
+        <li class="nav-item">
+          <button class="btn btn-info btn-round btn-sm" href="#" routerLink="/login">
+            <strong> Login </strong> <span class="sr-only">(current)</span>
+          </button>
+        </li>
+        <li class="nav-item">
+          <button class="navbar-toggler btn btn-primary btn-round btn-sm" type="button" data-toggle="collapse"
+            data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <strong> About </strong> <span class="sr-only">(current)</span>
+          </button>
         </li>
       </ul>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     </div>
   </div>
 </header>
